tests/NormalTests/paczka2/big_fuzzy/97406257.err
Error in line 9: S539 S539 73,10
Error in line 10: S539 S539 249,7
Error in line 22: kdT S19 -1,3
Error in line 18: kdT S19 66,3
Error in line 45: W8z6zepy0eo S883 43,27
Error in line 46: UNSSStU S539 63,55
Error in line 49: WeB5Oeo9NT A944 79,5
Error in line 54: W8z6zepy0eo S883 299,3
Error in line 65: W8z6zepy0eo S539 46,0
Error in line 69: SAirNP8d S19 64,5
Error in line 74: S539 S539 -4,0
Error in line 85: LWHLG6 A944 3,3
Error in line 87: LWHLG6 S19 76,3
Error in line 89: LWHLG6 A944 16,6
Error in line 90: SAirNP8d S883 11,4
Error in line 94: LWHLG6 S19 97,3
Error in line 58: UNSSStU S539 237,5
Error in line 97: S539 S19 81,2
Error in line 122: SAirNP8d A944 54,5
Error in line 127: S539 S883 84,3
Error in line 133: kdT A944 16,2
Error in line 138: W8z6zepy0eo S883 51,2
Error in line 128: LWHLG6 A944 32,2
Error in line 136: WeB5Oeo9NT A944 1,2
Error in line 149: WeB5Oeo9NT S19 28,3
Error in line 151: UNSSStU S539 1,5
Error in line 162: LWHLG6 )19 13,9
Error in line 164: S539 A944 -4,8
Error in line 169: SAirNP8d S19 98,3
Error in line 179: SAirNP8d A944 16,0
Error in line 174: S539 A944 21,7
Error in line 159: LWHLG6 S19 2,9
Error in line 194: W8z6zepy0eo S539 13,5
Error in line 213: S539 A944 52,2
Error in line 216: S539 S19 97,1
Error in line 195: SAirNP8d S883 49,3
Error in line 233: WeB5Oeo9NT S19 73,1
Error in line 232: S539 S883 103,5
Error in line 231: kdT S883 144,5
Error in line 234: WeB5Oeo9NT S883 22,1
